document Complete Environment Variables Guide for Cloudflare Workers + Hono && Complete Hono + Cloudflare Workers Project Setup Guide

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,16 @@
-# Environment Configuration
-NODE_ENV=development
-PORT=8787
+# Environment Variables Template
+# Copy this to .dev.vars for local development
 
-# CORS Configuration
-ALLOWED_ORIGINS=http://localhost:3000,https://yourdomain.com
+# API Keys (comma-separated list of valid API keys)
+API_KEYS=cz_dev_key_example_1,cz_dev_key_example_2
 
-# API Configuration
-API_VERSION=v1
-API_PREFIX=/api
+# Admin Secret (for administrative operations)
+ADMIN_SECRET=admin_dev_secret_example_change_this
 
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
+# Environment identifier
+ENVIRONMENT=development
 
-# Logging
-LOG_LEVEL=info
+# Instructions:
+# 1. Copy this file to .dev.vars
+# 2. Replace example values with your actual development credentials
+# 3. Never commit .dev.vars to git (it's already in .gitignore)
